--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div>
       <h1>This is main Branch</h1>
-      <p>created by vishal</p>
+      <p>Created by vishal.</p>
     </div>
   </body>
 </html>
