--- a/index.html
+++ b/index.html
@@ -1,14 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div>
-      <h1>This is main Branch</h1>
-      <p>Created by vishal.</p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <style>
+    body {
+      font-family: "Poppins", sans-serif;
+    }
+  </style>
+</head>
+
+<body>
+  <div>
+    <h1>This is main Branch</h1>
+    <p>Created by vishal.</p>
+    <div class="md:w-[85%] w-[95%] mx-[auto]">
+      <h1 class="text-[25px] font-bold ">The Jobs</h1>
+      <div class="flex flex-col md:flex-row gap-[20px] mt-[20px]">
+        <div class="bg-[#04445a] p-[35px] rounded-[10px] md:w-[450px]">
+          <img src="./images/amazon.png" alt="">
+          <h1 class="text-[35px] text-[#fff] font-bold pt-[25px]">Product Designer</h1>
+          <h3 class="text-[#fff] pt-[15px]">Amazon, Chennai - India</h3>
+          <p class="text-[#fff] w-[300px] pt-[15px]">Choose a job you love, and will never
+            have to work a day in you life</p>
+          <div class="flex pt-[15px] gap-[50px] items-center">
+            <button class="bg-none border-[2px] text-[#fff] rounded-[10px] px-[8px] py-[4px] text-[14px]">Full
+              Time</button>
+            <p class="text-[#fff]">$120-130k</p>
+          </div>
+        </div>
+        <div class="bg-[#5a279c] p-[35px] rounded-[10px] md:w-[450px]">
+          <div class="bg-[#fff] w-[30px] ">
+            <img src="./images/apple.png" alt="">
+          </div>
+          <h1 class="text-[35px] text-[#fff] font-bold pt-[25px]">Web Developer</h1>
+          <h3 class="text-[#fff] pt-[15px]">Apple, Chennai - India</h3>
+          <p class="text-[#fff] w-[300px] pt-[15px]">Choose a job you love, and will never
+            have to work a day in you life</p>
+          <div class="flex pt-[15px] gap-[50px] items-center">
+            <button class="bg-none border-[2px] text-[#fff] rounded-[10px] px-[8px] py-[4px] text-[14px]">Full
+              Time</button>
+            <p class="text-[#fff]">$100-140k</p>
+          </div>
+        </div>
+        <div class="bg-[#793725] p-[35px] rounded-[10px] md:w-[450px]">
+          <img src="./images/amazon.png" alt="">
+          <h1 class="text-[35px] text-[#fff] font-bold pt-[25px]">UX Researcher</h1>
+          <h3 class="text-[#fff] pt-[15px]">Amazon,Chennai-india</h3>
+          <p class="text-[#fff] w-[300px] pt-[15px]">Choose a job you love, and will never
+            have to work a day in you life</p>
+          <div class="flex pt-[15px] gap-[50px] items-center">
+            <button class="bg-none border-[2px] text-[#fff] rounded-[10px] px-[8px] py-[4px] text-[14px]">Full
+              Time</button>
+            <p class="text-[#fff]">$80-110k</p>
+          </div>
+        </div>
+      </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
