--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <h1>This is main Branch</h1>
-
-      <p>Created by vishal.</p>
-
-      <p>Created by Mohamed</p>
-
-    </div>
+    <div></div>
   </body>
 </html>
