--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lekton:ital,wght@0,400;0,700;1,400&family=Libertinus+Mono&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap"
+    rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <title>Document</title>
   <style>
     body {
@@ -14,13 +18,13 @@
 
 <body>
   <div>
-    <h1>This is main Branch</h1>
-    <p>Created by vishal.</p>
+    <!-- <h1>This is main Branch</h1>
+    <p>Created by vishal.</p> -->
     <div class="md:w-[85%] w-[95%] mx-[auto]">
       <h1 class="text-[25px] font-bold ">The Jobs</h1>
       <div class="flex flex-col md:flex-row gap-[20px] mt-[20px]">
         <div class="bg-[#04445a] p-[35px] rounded-[10px] md:w-[450px]">
-          <img src="./images/amazon.png" alt="">
+          <img src="./studentlove_assets/assets/amazon.png" alt="">
           <h1 class="text-[35px] text-[#fff] font-bold pt-[25px]">Product Designer</h1>
           <h3 class="text-[#fff] pt-[15px]">Amazon, Chennai - India</h3>
           <p class="text-[#fff] w-[300px] pt-[15px]">Choose a job you love, and will never
@@ -33,7 +37,7 @@
         </div>
         <div class="bg-[#5a279c] p-[35px] rounded-[10px] md:w-[450px]">
           <div class="bg-[#fff] w-[30px] ">
-            <img src="./images/apple.png" alt="">
+            <img src="./studentlove_assets/assets/apple.png" alt="">
           </div>
           <h1 class="text-[35px] text-[#fff] font-bold pt-[25px]">Web Developer</h1>
           <h3 class="text-[#fff] pt-[15px]">Apple, Chennai - India</h3>
@@ -46,7 +50,7 @@
           </div>
         </div>
         <div class="bg-[#793725] p-[35px] rounded-[10px] md:w-[450px]">
-          <img src="./images/amazon.png" alt="">
+          <img src="./studentlove_assets/assets/amazon.png" alt="">
           <h1 class="text-[35px] text-[#fff] font-bold pt-[25px]">UX Researcher</h1>
           <h3 class="text-[#fff] pt-[15px]">Amazon,Chennai-india</h3>
           <p class="text-[#fff] w-[300px] pt-[15px]">Choose a job you love, and will never
