--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div>
+  <div class="mb-[50px] mt-[30px]">
     <!-- <h1>This is main Branch</h1>
     <p>Created by vishal.</p> -->
     <div class="md:w-[85%] w-[95%] mx-[auto]">
