--- a/index.html
+++ b/index.html
@@ -1,57 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Document</title>
-   
-   
-    <style>
+  <title>Document</title>
 
-main{
+
+  <style>
+    main {
       max-width: 85%;
       margin: 0px auto;
     }
 
-   main h1{
+    main h1 {
       word-spacing: 5px;
       font-size: 45px;
       line-height: 65px;
     }
+
     main p {
       font-weight: 400px;
       font-size: 17px;
-      color:gray;
+      color: gray;
       padding-top: 10px;
       line-height: 40px;
     }
-    main >div:nth-child(1) div{
+
+    main>div:nth-child(1) div {
       display: flex;
-      gap:50px;
+      gap: 50px;
       margin-top: 40px;
       align-items: center;
 
     }
-     main >div:nth-child(1) div button{
+
+    main>div:nth-child(1) div button {
       padding: 10px 50px;
-      background-color:rgb(243, 243, 23);
+      background-color: rgb(243, 243, 23);
       border: none;
       border-radius: 15px;
-     }
-      body {
+    }
+
+    body {
       font-family: "Poppins", sans-serif;
     }
   </style>
   </head>
+
   <body>
     <div class="bg-[#5a279c]">
       <div
-        class="sm:w-[85%] w-[100%] mx-auto flex justify-between items-center sm:flex-row flex-col text-[#fff] py-[25px]"
-      >
+        class="sm:w-[85%] w-[100%] mx-auto flex justify-between items-center sm:flex-row flex-col text-[#fff] py-[25px]">
         <div>
           <h1 class="text-[25px]">StudentLove</h1>
         </div>
@@ -64,7 +67,8 @@ main{
     </div>
     <main class="d-flex flex-column flex-md-row justify-content-between align-items-center">
       <div>
-        <h1>Get your Dream <span class="d-block">job Fast and build </span>your <span style="color:rgb(131, 7, 248)">career</span></h1>
+        <h1>Get your Dream <span class="d-block">job Fast and build </span>your <span
+            style="color:rgb(131, 7, 248)">career</span></h1>
         <p>choose a job you love, and you will never have to <span class="d-block">work a day in your life</span></p>
         <div class="d-flex flex-column flex-md-row align-items-center  ">
           <button>Your Jobs</button>
@@ -74,61 +78,55 @@ main{
       <div>
         <img src="./studentlove_assets/assets/g-img.jpeg" alt="">
       </div>
-      
-  <div class="mb-[50px] mt-[30px]">
-    <!-- <h1>This is main Branch</h1>
+
+      <div class="mb-[50px] mt-[30px]">
+        <!-- <h1>This is main Branch</h1>
     <p>Created by vishal.</p> -->
-    <div class="md:w-[85%] w-[95%] mx-[auto]">
-      <h1 class="text-[25px] font-bold ">The Jobs</h1>
-      <div class="flex flex-col md:flex-row gap-[20px] mt-[20px]">
-        <div class="bg-[#04445a] p-[35px] rounded-[10px] md:w-[450px]">
-          <img src="./studentlove_assets/assets/amazon.png" alt="">
-          <h1 class="text-[35px] text-[#fff] font-bold pt-[25px]">Product Designer</h1>
-          <h3 class="text-[#fff] pt-[15px]">Amazon, Chennai - India</h3>
-          <p class="text-[#fff] w-[300px] pt-[15px]">Choose a job you love, and will never
-            have to work a day in you life</p>
-          <div class="flex pt-[15px] gap-[50px] items-center">
-            <button class="bg-none border-[2px] text-[#fff] rounded-[10px] px-[8px] py-[4px] text-[14px]">Full
-              Time</button>
-            <p class="text-[#fff]">$120-130k</p>
-          </div>
-        </div>
-        <div class="bg-[#5a279c] p-[35px] rounded-[10px] md:w-[450px]">
-          <div class="bg-[#fff] w-[30px] ">
-            <img src="./studentlove_assets/assets/apple.png" alt="">
-          </div>
-          <h1 class="text-[35px] text-[#fff] font-bold pt-[25px]">Web Developer</h1>
-          <h3 class="text-[#fff] pt-[15px]">Apple, Chennai - India</h3>
-          <p class="text-[#fff] w-[300px] pt-[15px]">Choose a job you love, and will never
-            have to work a day in you life</p>
-          <div class="flex pt-[15px] gap-[50px] items-center">
-            <button class="bg-none border-[2px] text-[#fff] rounded-[10px] px-[8px] py-[4px] text-[14px]">Full
-              Time</button>
-            <p class="text-[#fff]">$100-140k</p>
-          </div>
-        </div>
-        <div class="bg-[#793725] p-[35px] rounded-[10px] md:w-[450px]">
-          <img src="./studentlove_assets/assets/amazon.png" alt="">
-          <h1 class="text-[35px] text-[#fff] font-bold pt-[25px]">UX Researcher</h1>
-          <h3 class="text-[#fff] pt-[15px]">Amazon,Chennai-india</h3>
-          <p class="text-[#fff] w-[300px] pt-[15px]">Choose a job you love, and will never
-            have to work a day in you life</p>
-          <div class="flex pt-[15px] gap-[50px] items-center">
-            <button class="bg-none border-[2px] text-[#fff] rounded-[10px] px-[8px] py-[4px] text-[14px]">Full
-              Time</button>
-            <p class="text-[#fff]">$80-110k</p>
+        <div class="md:w-[85%] w-[95%] mx-[auto]">
+          <h1 class="text-[25px] font-bold ">The Jobs</h1>
+          <div class="flex flex-col md:flex-row gap-[20px] mt-[20px]">
+            <div class="bg-[#04445a] p-[35px] rounded-[10px] md:w-[450px]">
+              <img src="./studentlove_assets/assets/amazon.png" alt="">
+              <h1 class="text-[35px] text-[#fff] font-bold pt-[25px]">Product Designer</h1>
+              <h3 class="text-[#fff] pt-[15px]">Amazon, Chennai - India</h3>
+              <p class="text-[#fff] w-[300px] pt-[15px]">Choose a job you love, and will never
+                have to work a day in you life</p>
+              <div class="flex pt-[15px] gap-[50px] items-center">
+                <button class="bg-none border-[2px] text-[#fff] rounded-[10px] px-[8px] py-[4px] text-[14px]">Full
+                  Time</button>
+                <p class="text-[#fff]">$120-130k</p>
+              </div>
+            </div>
+            <div class="bg-[#5a279c] p-[35px] rounded-[10px] md:w-[450px]">
+              <div class="bg-[#fff] w-[30px] ">
+                <img src="./studentlove_assets/assets/apple.png" alt="">
+              </div>
+              <h1 class="text-[35px] text-[#fff] font-bold pt-[25px]">Web Developer</h1>
+              <h3 class="text-[#fff] pt-[15px]">Apple, Chennai - India</h3>
+              <p class="text-[#fff] w-[300px] pt-[15px]">Choose a job you love, and will never
+                have to work a day in you life</p>
+              <div class="flex pt-[15px] gap-[50px] items-center">
+                <button class="bg-none border-[2px] text-[#fff] rounded-[10px] px-[8px] py-[4px] text-[14px]">Full
+                  Time</button>
+                <p class="text-[#fff]">$100-140k</p>
+              </div>
+            </div>
+            <div class="bg-[#793725] p-[35px] rounded-[10px] md:w-[450px]">
+              <img src="./studentlove_assets/assets/amazon.png" alt="">
+              <h1 class="text-[35px] text-[#fff] font-bold pt-[25px]">UX Researcher</h1>
+              <h3 class="text-[#fff] pt-[15px]">Amazon,Chennai-india</h3>
+              <p class="text-[#fff] w-[300px] pt-[15px]">Choose a job you love, and will never
+                have to work a day in you life</p>
+              <div class="flex pt-[15px] gap-[50px] items-center">
+                <button class="bg-none border-[2px] text-[#fff] rounded-[10px] px-[8px] py-[4px] text-[14px]">Full
+                  Time</button>
+                <p class="text-[#fff]">$80-110k</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
     </main>
   </body>
+
 </html>
-
-
-
-
-
-
-
